# NYQSTdocling

./: .gitignore  README.md  claude.md  process_sftr_esma.py  process_sftr_esma_v2.py  pyproject.toml  run_all_modes.sh
nyqstdocling/: __init__.py
output/: PROCESSING_RESULTS.md  processing_summary.json
output/quick/: SFTR_Delegated_Reg.md  SFTR_Regulation_PDF.md
